[project]
name = "gymnasium-reinforcement-learning-tasks"
version = "0.1.0"
description = "A collection of reinforcement learning tasks built using Gymnasium for experimentation and research."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[box2d]>=1.1.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
]
